--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
+    "start": "node server/index.js",
+    "dev": "node server/index.js",
     "build": "vite build",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "dev:server": "nodemon server/index.js",
-    "dev:client": "vite"
+    "dev:server": "nodemon server/index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
@@ -18,7 +17,6 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
