--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "imask": "^7.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0"
   }
