--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "node server/index.js",
+    "start": "node backend/index.js",
+    "dev": "node backend/index.js",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server/index.js",
-    "dev:server": "nodemon server/index.js"
+    "server": "node backend/index.js",
+    "dev:server": "nodemon backend/index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
