--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "express": "^4.19.2",
     "imask": "^7.6.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0"
+    "mysql2": "^3.11.4"
   }
 }
