--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "build:styles": "sass --no-source-map frontend/styles/main.scss frontend/styles/main.css && sass --no-source-map frontend/styles/admin.scss frontend/styles/admin.css"
   },
   "devDependencies": {
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "imask": "^7.6.1"
   }
 }
