--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build:styles": "sass --no-source-map frontend/styles/main.scss frontend/styles/main.css && sass --no-source-map frontend/styles/admin.scss frontend/styles/admin.css"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.1.4",
     "sass": "^1.77.5",
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "imask": "^7.6.1"
+    "imask": "^7.6.1",
+    "vue": "^3.5.13"
   }
 }
