--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build:styles": "sass --no-source-map frontend/styles/main.scss frontend/styles/main.css && sass --no-source-map frontend/styles/admin.scss frontend/styles/admin.css"
+    "build:styles": "sass --no-source-map frontend/styles/main.scss frontend/styles/main.css"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
