--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "build:styles": "sass --no-source-map frontend/styles/main.scss frontend/styles/main.css"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
-    "sass": "^1.77.5",
     "vite": "^5.4.10"
   },
   "dependencies": {
