--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node backend/server.js"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "imask": "^7.6.1",
+    "mysql2": "^3.11.5",
     "vue": "^3.5.13"
   }
 }
