--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
+    "dev": "concurrently -k \"npm:server\" \"npm:client\"",
+    "client": "vite",
+    "server": "node backend/server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node backend/server.js"
+    "start": "node backend/server.js"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "concurrently": "^9.1.0",
     "vite": "^5.4.10"
   },
   "dependencies": {
