--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "imask": "^7.6.1",
     "mysql2": "^3.11.5",
